--- a/EaseMyTrip/test-output/index.html
+++ b/EaseMyTrip/test-output/index.html
@@ -93,7 +93,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">5 methods,   5 passed</span>
+                    <span class="method-stats">7 methods,   7 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -104,12 +104,22 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="AutomationProject1.EaseMyTrip.EaseMyTripTest" class="method navigator-link" hash-for-method="testSearchFlights(Bangalore, Chennai, 7/1/2022, Prem.Economy, 1.0, 1.0, 1.0)">testSearchFlights(Bangalore, Chennai, 7/1/2022, Prem.Economy, 1.0, 1.0, 1.0)</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="AutomationProject1.EaseMyTrip.EaseMyTripTest" class="method navigator-link" hash-for-method="openBrowser">openBrowser</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="AutomationProject1.EaseMyTrip.EaseMyTripTest" class="method navigator-link" hash-for-method="testSearchFlights(Delhi, Bangalore, 4/1/2022, Economy, 4.0, 4.0, 2.0)">testSearchFlights(Delhi, Bangalore, 4/1/2022, Economy, 4.0, 4.0, 2.0)</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="AutomationProject1.EaseMyTrip.EaseMyTripTest" class="method navigator-link" hash-for-method="tearDown">tearDown</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Default_suite" title="AutomationProject1.EaseMyTrip.EaseMyTripTest" class="method navigator-link" hash-for-method="testSearchFlights(Mumbai, Chennai, 3/19/2022, Prem.Economy, 3.0, 2.0, 1.0)">testSearchFlights(Mumbai, Chennai, 3/19/2022, Prem.Economy, 3.0, 2.0, 1.0)</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Default_suite" title="AutomationProject1.EaseMyTrip.EaseMyTripTest" class="method navigator-link" hash-for-method="testSearchFlights(Chennai, Delhi, 5/9/2022, Prem.Economy, 2.0, 1.0, 1.0)">testSearchFlights(Chennai, Delhi, 5/9/2022, Prem.Economy, 2.0, 1.0, 1.0)</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
@@ -119,12 +129,12 @@
                       <br/>
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="AutomationProject1.EaseMyTrip.EaseMyTripTest" class="method navigator-link" hash-for-method="testSearchFlights(Chennai, Delhi, 5/9/2022, Prem.Economy, 3.0, 1.0, 1.0)">testSearchFlights(Chennai, Delhi, 5/9/2022, Prem.Economy, 3.0, 1.0, 1.0)</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="AutomationProject1.EaseMyTrip.EaseMyTripTest" class="method navigator-link" hash-for-method="testSearchFlights(Delhi, Bangalore, 4/1/2022, Economy, 2.0, 1.0, 1.0)">testSearchFlights(Delhi, Bangalore, 4/1/2022, Economy, 2.0, 1.0, 1.0)</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="AutomationProject1.EaseMyTrip.EaseMyTripTest" class="method navigator-link" hash-for-method="testSearchFlights(Mumbai, Chennai, 3/19/2022, Prem.Economy, 3.0, 2.0, 1.0)">testSearchFlights(Mumbai, Chennai, 3/19/2022, Prem.Economy, 3.0, 2.0, 1.0)</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="AutomationProject1.EaseMyTrip.EaseMyTripTest" class="method navigator-link" hash-for-method="testSearchFlights(Bangalore, Chennai, 7/1/2022, Prem.Economy, 1.0, 1.0, 1.0)">testSearchFlights(Bangalore, Chennai, 7/1/2022, Prem.Economy, 1.0, 1.0, 1.0)</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -147,18 +157,32 @@
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="testSearchFlights(Bangalore, Chennai, 7/1/2022, Prem.Economy, 1.0, 1.0, 1.0)">
-                  </a> <!-- testSearchFlights(Bangalore, Chennai, 7/1/2022, Prem.Economy, 1.0, 1.0, 1.0) -->
-                  <span class="method-name">testSearchFlights</span>
-                  <span class="parameters">(Bangalore, Chennai, 7/1/2022, Prem.Economy, 1.0, 1.0, 1.0)</span>
+                  <a name="openBrowser">
+                  </a> <!-- openBrowser -->
+                  <span class="method-name">openBrowser</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
               <div class="method">
                 <div class="method-content">
-                  <a name="testSearchFlights(Delhi, Bangalore, 4/1/2022, Economy, 4.0, 4.0, 2.0)">
-                  </a> <!-- testSearchFlights(Delhi, Bangalore, 4/1/2022, Economy, 4.0, 4.0, 2.0) -->
+                  <a name="tearDown">
+                  </a> <!-- tearDown -->
+                  <span class="method-name">tearDown</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="testSearchFlights(Mumbai, Chennai, 3/19/2022, Prem.Economy, 3.0, 2.0, 1.0)">
+                  </a> <!-- testSearchFlights(Mumbai, Chennai, 3/19/2022, Prem.Economy, 3.0, 2.0, 1.0) -->
                   <span class="method-name">testSearchFlights</span>
-                  <span class="parameters">(Delhi, Bangalore, 4/1/2022, Economy, 4.0, 4.0, 2.0)</span>
+                  <span class="parameters">(Mumbai, Chennai, 3/19/2022, Prem.Economy, 3.0, 2.0, 1.0)</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="testSearchFlights(Chennai, Delhi, 5/9/2022, Prem.Economy, 2.0, 1.0, 1.0)">
+                  </a> <!-- testSearchFlights(Chennai, Delhi, 5/9/2022, Prem.Economy, 2.0, 1.0, 1.0) -->
+                  <span class="method-name">testSearchFlights</span>
+                  <span class="parameters">(Chennai, Delhi, 5/9/2022, Prem.Economy, 2.0, 1.0, 1.0)</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
               <div class="method">
@@ -171,18 +195,18 @@
               </div> <!-- method -->
               <div class="method">
                 <div class="method-content">
-                  <a name="testSearchFlights(Chennai, Delhi, 5/9/2022, Prem.Economy, 3.0, 1.0, 1.0)">
-                  </a> <!-- testSearchFlights(Chennai, Delhi, 5/9/2022, Prem.Economy, 3.0, 1.0, 1.0) -->
+                  <a name="testSearchFlights(Delhi, Bangalore, 4/1/2022, Economy, 2.0, 1.0, 1.0)">
+                  </a> <!-- testSearchFlights(Delhi, Bangalore, 4/1/2022, Economy, 2.0, 1.0, 1.0) -->
                   <span class="method-name">testSearchFlights</span>
-                  <span class="parameters">(Chennai, Delhi, 5/9/2022, Prem.Economy, 3.0, 1.0, 1.0)</span>
+                  <span class="parameters">(Delhi, Bangalore, 4/1/2022, Economy, 2.0, 1.0, 1.0)</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
               <div class="method">
                 <div class="method-content">
-                  <a name="testSearchFlights(Mumbai, Chennai, 3/19/2022, Prem.Economy, 3.0, 2.0, 1.0)">
-                  </a> <!-- testSearchFlights(Mumbai, Chennai, 3/19/2022, Prem.Economy, 3.0, 2.0, 1.0) -->
+                  <a name="testSearchFlights(Bangalore, Chennai, 7/1/2022, Prem.Economy, 1.0, 1.0, 1.0)">
+                  </a> <!-- testSearchFlights(Bangalore, Chennai, 7/1/2022, Prem.Economy, 1.0, 1.0, 1.0) -->
                   <span class="method-name">testSearchFlights</span>
-                  <span class="parameters">(Mumbai, Chennai, 3/19/2022, Prem.Economy, 3.0, 2.0, 1.0)</span>
+                  <span class="parameters">(Bangalore, Chennai, 7/1/2022, Prem.Economy, 1.0, 1.0, 1.0)</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -190,7 +214,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">/private/var/folders/fl/73tcjdt14w7fmqf42c7f7npm0000gn/T/testng-eclipse-283820962/testng-customsuite.xml</span>
+            <span class="header-content">/private/var/folders/fl/73tcjdt14w7fmqf42c7f7npm0000gn/T/testng-eclipse--1524718046/testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -239,32 +263,40 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(5);
+data.addRows(7);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'testSearchFlights')
 data.setCell(0, 2, 'AutomationProject1.EaseMyTrip.EaseMyTripTest')
-data.setCell(0, 3, 14148);
+data.setCell(0, 3, 9915);
 data.setCell(1, 0, 1)
 data.setCell(1, 1, 'testSearchFlights')
 data.setCell(1, 2, 'AutomationProject1.EaseMyTrip.EaseMyTripTest')
-data.setCell(1, 3, 12448);
+data.setCell(1, 3, 9160);
 data.setCell(2, 0, 2)
 data.setCell(2, 1, 'testSearchFlights')
 data.setCell(2, 2, 'AutomationProject1.EaseMyTrip.EaseMyTripTest')
-data.setCell(2, 3, 11364);
+data.setCell(2, 3, 9158);
 data.setCell(3, 0, 3)
 data.setCell(3, 1, 'testSearchFlights')
 data.setCell(3, 2, 'AutomationProject1.EaseMyTrip.EaseMyTripTest')
-data.setCell(3, 3, 10862);
+data.setCell(3, 3, 6579);
 data.setCell(4, 0, 4)
 data.setCell(4, 1, 'testSearchFlights')
 data.setCell(4, 2, 'AutomationProject1.EaseMyTrip.EaseMyTripTest')
-data.setCell(4, 3, 10318);
+data.setCell(4, 3, 6243);
+data.setCell(5, 0, 5)
+data.setCell(5, 1, 'openBrowser')
+data.setCell(5, 2, 'AutomationProject1.EaseMyTrip.EaseMyTripTest')
+data.setCell(5, 3, 2087);
+data.setCell(6, 0, 6)
+data.setCell(6, 1, 'tearDown')
+data.setCell(6, 2, 'AutomationProject1.EaseMyTrip.EaseMyTripTest')
+data.setCell(6, 3, 373);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 59 seconds</span>
+              <span class="suite-total-time">Total running time: 43 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -292,24 +324,32 @@ return data;
             <div class="chronological-class">
               <div class="chronological-class-name">AutomationProject1.EaseMyTrip.EaseMyTripTest</div> <!-- chronological-class-name -->
               <div class="test-method">
-                <span class="method-name">testSearchFlights(Mumbai, Chennai, 3/19/2022, Prem.Economy, 3.0, 2.0, 1.0)</span>
+                <span class="method-name">openBrowser</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
-                <span class="method-name">testSearchFlights(Delhi, Bangalore, 4/1/2022, Economy, 4.0, 4.0, 2.0)</span>
-                <span class="method-start">11367 ms</span>
+                <span class="method-name">testSearchFlights(Mumbai, Chennai, 3/19/2022, Prem.Economy, 3.0, 2.0, 1.0)</span>
+                <span class="method-start">2337 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
-                <span class="method-name">testSearchFlights(Chennai, Delhi, 5/9/2022, Prem.Economy, 3.0, 1.0, 1.0)</span>
-                <span class="method-start">25516 ms</span>
+                <span class="method-name">testSearchFlights(Delhi, Bangalore, 4/1/2022, Economy, 2.0, 1.0, 1.0)</span>
+                <span class="method-start">11498 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">testSearchFlights(Chennai, Delhi, 5/9/2022, Prem.Economy, 2.0, 1.0, 1.0)</span>
+                <span class="method-start">21414 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">testSearchFlights(Delhi, Mumbai, 6/1/2022, Economy, 2.0, 2.0, 0.0)</span>
-                <span class="method-start">36379 ms</span>
+                <span class="method-start">27658 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">testSearchFlights(Bangalore, Chennai, 7/1/2022, Prem.Economy, 1.0, 1.0, 1.0)</span>
-                <span class="method-start">48828 ms</span>
+                <span class="method-start">36816 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">tearDown</span>
+                <span class="method-start">43396 ms</span>
               </div> <!-- test-method -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
