--- a/EaseMyTrip/test-output/old/Default suite/classes.html
+++ b/EaseMyTrip/test-output/old/Default suite/classes.html
@@ -14,6 +14,14 @@
 <td>testSearchFlights</td>
 <td>&nbsp;</td></tr>
 <tr>
+<td>&nbsp;</td>
+<td>openBrowser</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>tearDown</td>
+<td>&nbsp;</td></tr>
+<tr>
 <td align='center' colspan='3'>@BeforeClass</td>
 </tr>
 <tr>
