--- a/EaseMyTrip/test-output/old/Default suite/methods.html
+++ b/EaseMyTrip/test-output/old/Default suite/methods.html
@@ -1,14 +1,18 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="a8dba8">  <td>22/01/10 17:35:55</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="EaseMyTripTest.testSearchFlights(java.lang.String,java.lang.String,java.lang.String,java.lang.String,java.lang.String,java.lang.String,java.lang.String)[pri:4, instance:AutomationProject1.EaseMyTrip.EaseMyTripTest@2cbb3d47]">testSearchFlights</td> 
-  <td>main@178049969</td>   <td></td> </tr>
-<tr bgcolor="a8dba8">  <td>22/01/10 17:35:55</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="EaseMyTripTest.testSearchFlights(java.lang.String,java.lang.String,java.lang.String,java.lang.String,java.lang.String,java.lang.String,java.lang.String)[pri:4, instance:AutomationProject1.EaseMyTrip.EaseMyTripTest@2cbb3d47]">testSearchFlights</td> 
-  <td>main@178049969</td>   <td></td> </tr>
-<tr bgcolor="a8dba8">  <td>22/01/10 17:35:55</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="EaseMyTripTest.testSearchFlights(java.lang.String,java.lang.String,java.lang.String,java.lang.String,java.lang.String,java.lang.String,java.lang.String)[pri:4, instance:AutomationProject1.EaseMyTrip.EaseMyTripTest@2cbb3d47]">testSearchFlights</td> 
-  <td>main@178049969</td>   <td></td> </tr>
-<tr bgcolor="a8dba8">  <td>22/01/10 17:35:55</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="EaseMyTripTest.testSearchFlights(java.lang.String,java.lang.String,java.lang.String,java.lang.String,java.lang.String,java.lang.String,java.lang.String)[pri:4, instance:AutomationProject1.EaseMyTrip.EaseMyTripTest@2cbb3d47]">testSearchFlights</td> 
-  <td>main@178049969</td>   <td></td> </tr>
-<tr bgcolor="a8dba8">  <td>22/01/10 17:35:55</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="EaseMyTripTest.testSearchFlights(java.lang.String,java.lang.String,java.lang.String,java.lang.String,java.lang.String,java.lang.String,java.lang.String)[pri:4, instance:AutomationProject1.EaseMyTrip.EaseMyTripTest@2cbb3d47]">testSearchFlights</td> 
-  <td>main@178049969</td>   <td></td> </tr>
+<tr bgcolor="a8dba8">  <td>22/01/10 19:00:21</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="EaseMyTripTest.testSearchFlights(java.lang.String,java.lang.String,java.lang.String,java.lang.String,java.lang.String,java.lang.String,java.lang.String)[pri:4, instance:AutomationProject1.EaseMyTrip.EaseMyTripTest@7ff95560]">testSearchFlights</td> 
+  <td>main@1782580546</td>   <td></td> </tr>
+<tr bgcolor="a8dba8">  <td>22/01/10 19:00:21</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="EaseMyTripTest.testSearchFlights(java.lang.String,java.lang.String,java.lang.String,java.lang.String,java.lang.String,java.lang.String,java.lang.String)[pri:4, instance:AutomationProject1.EaseMyTrip.EaseMyTripTest@7ff95560]">testSearchFlights</td> 
+  <td>main@1782580546</td>   <td></td> </tr>
+<tr bgcolor="a8dba8">  <td>22/01/10 19:00:28</td>   <td>6580</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="EaseMyTripTest.tearDown()[pri:6, instance:AutomationProject1.EaseMyTrip.EaseMyTripTest@7ff95560]">tearDown</td> 
+  <td>main@1782580546</td>   <td></td> </tr>
+<tr bgcolor="a8dba8">  <td>22/01/10 18:59:45</td>   <td>-36816</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="EaseMyTripTest.openBrowser()[pri:0, instance:AutomationProject1.EaseMyTrip.EaseMyTripTest@7ff95560]">openBrowser</td> 
+  <td>main@1782580546</td>   <td></td> </tr>
+<tr bgcolor="a8dba8">  <td>22/01/10 19:00:21</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="EaseMyTripTest.testSearchFlights(java.lang.String,java.lang.String,java.lang.String,java.lang.String,java.lang.String,java.lang.String,java.lang.String)[pri:4, instance:AutomationProject1.EaseMyTrip.EaseMyTripTest@7ff95560]">testSearchFlights</td> 
+  <td>main@1782580546</td>   <td></td> </tr>
+<tr bgcolor="a8dba8">  <td>22/01/10 19:00:21</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="EaseMyTripTest.testSearchFlights(java.lang.String,java.lang.String,java.lang.String,java.lang.String,java.lang.String,java.lang.String,java.lang.String)[pri:4, instance:AutomationProject1.EaseMyTrip.EaseMyTripTest@7ff95560]">testSearchFlights</td> 
+  <td>main@1782580546</td>   <td></td> </tr>
+<tr bgcolor="a8dba8">  <td>22/01/10 19:00:21</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="EaseMyTripTest.testSearchFlights(java.lang.String,java.lang.String,java.lang.String,java.lang.String,java.lang.String,java.lang.String,java.lang.String)[pri:4, instance:AutomationProject1.EaseMyTrip.EaseMyTripTest@7ff95560]">testSearchFlights</td> 
+  <td>main@1782580546</td>   <td></td> </tr>
 </table>
