--- a/EaseMyTrip/test-output/old/Suite/methods-alphabetical.html
+++ b/EaseMyTrip/test-output/old/Suite/methods-alphabetical.html
@@ -1,12 +1,18 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="a8dba8">  <td>22/01/09 22:37:17</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="EaseMyTripTest.setUp()[pri:0, instance:AutomationProject1.EaseMyTrip.EaseMyTripTest@1198b989]">setUp</td> 
-  <td>main@1782580546</td>   <td></td> </tr>
-<tr bgcolor="a8dba8">  <td>22/01/09 22:37:28</td>   <td>11052</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="EaseMyTripTest.testSearchFlights(java.lang.String,java.lang.String,java.lang.String,java.lang.String,java.lang.String,java.lang.String,java.lang.String)[pri:4, instance:AutomationProject1.EaseMyTrip.EaseMyTripTest@1198b989]">testSearchFlights</td> 
-  <td>main@1782580546</td>   <td></td> </tr>
-<tr bgcolor="a8dba8">  <td>22/01/09 22:37:28</td>   <td>11052</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="EaseMyTripTest.testSearchFlights(java.lang.String,java.lang.String,java.lang.String,java.lang.String,java.lang.String,java.lang.String,java.lang.String)[pri:4, instance:AutomationProject1.EaseMyTrip.EaseMyTripTest@1198b989]">testSearchFlights</td> 
-  <td>main@1782580546</td>   <td></td> </tr>
-<tr bgcolor="a8dba8">  <td>22/01/09 22:37:22</td>   <td>4699</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="EaseMyTripTest.verifyPageTitle()[pri:1, instance:AutomationProject1.EaseMyTrip.EaseMyTripTest@1198b989]">verifyPageTitle</td> 
-  <td>main@1782580546</td>   <td></td> </tr>
+<tr bgcolor="a8dba8">  <td>22/01/11 23:12:34</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="EaseMyTripTest.openBrowser()[pri:0, instance:AutomationProject1.EaseMyTrip.EaseMyTripTest@add0edd]">openBrowser</td> 
+  <td>main@2114684409</td>   <td></td> </tr>
+<tr bgcolor="a8dba8">  <td>22/01/11 23:13:18</td>   <td>44164</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="EaseMyTripTest.tearDown()[pri:6, instance:AutomationProject1.EaseMyTrip.EaseMyTripTest@add0edd]">tearDown</td> 
+  <td>main@2114684409</td>   <td></td> </tr>
+<tr bgcolor="a8dba8">  <td>22/01/11 23:13:10</td>   <td>36163</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="EaseMyTripTest.testSearchFlights(java.lang.String,java.lang.String,java.lang.String,java.lang.String,java.lang.String,java.lang.String,java.lang.String)[pri:4, instance:AutomationProject1.EaseMyTrip.EaseMyTripTest@add0edd]">testSearchFlights</td> 
+  <td>main@2114684409</td>   <td></td> </tr>
+<tr bgcolor="a8dba8">  <td>22/01/11 23:13:10</td>   <td>36163</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="EaseMyTripTest.testSearchFlights(java.lang.String,java.lang.String,java.lang.String,java.lang.String,java.lang.String,java.lang.String,java.lang.String)[pri:4, instance:AutomationProject1.EaseMyTrip.EaseMyTripTest@add0edd]">testSearchFlights</td> 
+  <td>main@2114684409</td>   <td></td> </tr>
+<tr bgcolor="a8dba8">  <td>22/01/11 23:13:10</td>   <td>36163</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="EaseMyTripTest.testSearchFlights(java.lang.String,java.lang.String,java.lang.String,java.lang.String,java.lang.String,java.lang.String,java.lang.String)[pri:4, instance:AutomationProject1.EaseMyTrip.EaseMyTripTest@add0edd]">testSearchFlights</td> 
+  <td>main@2114684409</td>   <td></td> </tr>
+<tr bgcolor="a8dba8">  <td>22/01/11 23:13:10</td>   <td>36163</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="EaseMyTripTest.testSearchFlights(java.lang.String,java.lang.String,java.lang.String,java.lang.String,java.lang.String,java.lang.String,java.lang.String)[pri:4, instance:AutomationProject1.EaseMyTrip.EaseMyTripTest@add0edd]">testSearchFlights</td> 
+  <td>main@2114684409</td>   <td></td> </tr>
+<tr bgcolor="a8dba8">  <td>22/01/11 23:13:10</td>   <td>36163</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="EaseMyTripTest.testSearchFlights(java.lang.String,java.lang.String,java.lang.String,java.lang.String,java.lang.String,java.lang.String,java.lang.String)[pri:4, instance:AutomationProject1.EaseMyTrip.EaseMyTripTest@add0edd]">testSearchFlights</td> 
+  <td>main@2114684409</td>   <td></td> </tr>
 </table>
